--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="projects-list">
                 <a href="https://github.com/mateq2005/date-time" target="_blank">data-time</a>
                 <a href="https://github.com/mateq2005/script.js" target="_blank">script.js</a>
-                <a href="https://github.com/mateq2005/mateq2005" target="_blank">mateq2005</a>
+                <a href="https://mateq2005.github.io/watch-hub/" target="_blank">mateq2005</a>
             </div>
 
         </div>
