--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
             <!--projects-list-->
             <div class="projects-list">
-                <a href="https://github.com/mateq2005/date-time" target="_blank">data-time</a>
-                <a href="https://github.com/mateq2005/script.js" target="_blank">script.js</a>
+                <a href="https://github.com/mateq2005/rice-and-spice" target="_blank">rice-and-spice</a>
                 <a href="https://github.com/mateq2005/watch-hub" target="_blank">watch-hub</a>
             </div>
 
