--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <div class="projects-list">
                 <a href="https://github.com/mateq2005/rice-and-spice" target="_blank">rice-and-spice</a>
                 <a href="https://github.com/mateq2005/watch-hub" target="_blank">watch-hub</a>
+                <a href="https://github.com/mateq2005/company" target="_blank">company</a>
             </div>
 
         </div>
