--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Mateusz">
     <meta name="description" content="Welcome to my portfolio website! This space showcases my work and skills in the world of web development.">
     <title>mateq2005 | portfolio</title>
     <link rel="stylesheet" href="style.css">
